<resources>
    <string name="app_name">Popular Movies</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="sort_by">Sort By</string>
    <string name="top_rated">Top Rated</string>
    <string name="most_popular">Most Popular</string>
    <string name="release_date">Release Date</string>
    <string name="user_rating">User Rating</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="max_rating">/10</string>
    <string name="sort_by_popularity">Sort by Popularity</string>
    <string name="sort_by_rating">Sort by Rating</string>
    <string name="overview">Overview</string>
    <string name="title_of_the_film">Title of the Film</string>
    <string name="favorite">Favorites</string>
    <string name="trailers">Trailers</string>
    <string name="content_authority">com.example.saisantosh.popularmovies.app</string>
    <string name="reviews">Reviews</string>
    <string name="trailer_hint">No Trailers for this movie</string>
    <string name="review_hint">No reviews available for this movie</string>
</resources>
