<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical">


        <TextView
            android:id="@+id/movie_title"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@color/titleBackground"
            android:paddingTop="25dp"
            android:text="@string/title_of_the_film"
            android:textColor="@android:color/white"
            android:textSize="30sp" />

        <LinearLayout
            android:id="@+id/inner_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/movie_title"
            android:background="@android:color/white"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/movie_poster"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:contentDescription="@string/movie_poster" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:paddingLeft="40dp"
                    android:paddingTop="100dp"
                    android:text="@string/release_date"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/release_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:text="Small Text"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:paddingLeft="40dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:paddingLeft="40dp"
                    android:text="@string/user_rating"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/user_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:paddingLeft="40dp"
                    android:text="Small Text"
                    android:textAppearance="?android:attr/textAppearanceMedium" />


            </LinearLayout>


        </LinearLayout>

        <TextView
            android:id="@+id/overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/inner_layout"
            android:layout_marginTop="10dp"
            android:text="@string/overview"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/borderlayout"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@id/overview"
            android:background="@android:color/black"
            android:orientation="horizontal" />

        <TextView
            android:id="@+id/plot_synopsis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/borderlayout"
            android:layout_centerVertical="true"
            android:layout_marginTop="5dp"
            android:background="@android:color/white"
            android:text="Medium Text"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </RelativeLayout>
</ScrollView>